--- a/test.html
+++ b/test.html
@@ -3,6 +3,6 @@
         <title>test.html</title>
     </head>
     <body>
-        <p>fra test</p>
+        <p>fra test i github</p>
     </body>
 </html>
