--- a/artnasjonal/index.html
+++ b/artnasjonal/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://js.arcgis.com/4.19/esri/themes/light/main.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/gridjs/dist/theme/mermaid.min.css"  />
-    <link rel="stylesheet" href="css/faktaark.css" />
+    <link rel="stylesheet" href="css/artnasjonal.css" />
 
     <title>Faktaark, arter av nasjonal forvaltningsinteresse</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
