--- a/artnasjonal/index.html
+++ b/artnasjonal/index.html
@@ -30,25 +30,31 @@
             </div>
         </div>
     </div>
-    
+
     <br>
 
     <div class="container" id="innhold1">
         <div class="row">
-            <div class="col-sm-4"><b>Utskrtiftsdato:</b></div><div class="col-sm-8" id="datoDiv">2011-01-01</div>
+            <div class="col-sm-4"><b>Utskriftsdato:</b></div><div class="col-sm-8" id="utskriftsDatoDiv"></div>
         </div>
     </div>
 
     <div class="container" id="kriterier">
         <div class="row">
             <div class="col-sm-4"><b>Utvalgskriterier:</b></div>
-            <div class="col-sm-6">
+            <div class="col-sm-8">
                 <table class="table table-bordered">
+                    <thead>
+                        <tr>
+                          <th>Kriterie</th>
+                          <th>Forklaring</th>
+                          <th>Valg</th>
+                        </tr>
+                      </thead>
                     <tbody id="kriterierTablebody">
                     </tbody>
                 </table>
             </div>
-            <div class="col-sm-2"></div>
         </div>
     </div>   
 
