Lagt til Pål sine endringsforslag

--- a/artnasjonal/index.html
+++ b/artnasjonal/index.html
@@ -61,21 +61,27 @@
 
     <p style="page-break-before: always"></p>
     <div class="container">
-        <div class="col-sm-12"> 
-            <div id="map"></div>
+        <div class="row">
+            <div class="col-sm-12">
+                <div id="map"></div>
+            </div>
         </div>
     </div>
 
     <br> 
-
+    
     <div class="container">
-        <h3>Datagrunnlag fra Artskart</h3>
-        <div id="wrapper"></div>
+        <div class="row">
+            <div class="col-sm-12">
+                <h3>Datagrunnlag fra Artskart</h3>
+                <div id="wrapper"></div>
+            </div>
+        </div>
     </div>
 
     <br>
 
-    <div class="container"><!-- todo grønn knapp -->
+    <div class="container" style="text-align: center;">
         <a href="#demo" class="btn btn-primary" data-toggle="collapse">Om datagrunnlaget</a>
         <div id="demo" class="collapse"><br>
             Alle data er hentet fra Artskart hos Artsdatabanken ved hjelp av automatiserte rutiner, og data oppdateres to ganger per uke. Egenskaper som er spesielt relevant for forvaltningen er referert øverst i faktaarket. Kriterietabellen viser hva som ligger til grunn for utvalget av arter.<br><br>
@@ -83,9 +89,7 @@
         </div>
     </div>
 
-    <div class="container" style="text-align: center;">
-        <p>Miljødirektoratet 2021</p>
-    </div>
+    <br>
 </body>
 
 </html>
