--- a/artnasjonal/index.html
+++ b/artnasjonal/index.html
@@ -81,9 +81,9 @@
 
     <br>
 
-    <div class="container" style="text-align: center;">
-        <a href="#demo" class="btn btn-primary" data-toggle="collapse">Om datagrunnlaget</a>
-        <div id="demo" class="collapse"><br>
+    <div class="container" id="footer">
+        <a href="#footerDiv" class="btn btn-primary" data-toggle="collapse" >Om datagrunnlaget</a>
+        <div id="footerDiv" class="collapse" style="text-align: left;"><br>
             Alle data er hentet fra Artskart hos Artsdatabanken ved hjelp av automatiserte rutiner, og data oppdateres to ganger per uke. Egenskaper som er spesielt relevant for forvaltningen er referert øverst i faktaarket. Kriterietabellen viser hva som ligger til grunn for utvalget av arter.<br><br>
             I mange tilfeller er det mer enn én observasjon av samme art på nøyaktig samme geografiske plassering. I slike tilfeller viser vi alle disse i tabellen Datagrunnlag fra Artskart, slik at hver enkelt observasjon er tilgjengelig. Tabellen inneholder feltnavn fra Artskart og er publisert uten bearbeiding fra Miljødirektoratet, bortsett fra formatering og presentasjon. Datagrunnlaget fra Artskart er lagret som en liste som kan lastes ned, ses i faktaark eller brukes direkte i kartklienter som støtter ArcGIS REST.<br>
         </div>
@@ -91,5 +91,4 @@
 
     <br>
 </body>
-
 </html>
